Ajuste de preços e description

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Prototipaí - IA para Projetos de Software</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="IA para èscrever Documento de Requisitos para Projetos de Software" name="description">
+    <meta content="Geração automática de requisitos funcionais e técnicos para projetos de IA" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -301,7 +301,7 @@
                                 </div>
                                 <div class="p-4 pt-0">
                                     <h1 class="mb-3">
-                                        <small class="align-top" style="font-size: 22px; line-height: 45px;">R$</small>199<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ mês</small>
+                                        <small class="align-top" style="font-size: 22px; line-height: 45px;">R$</small>156<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ mês</small>
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Gravação e Transcrição de Reuniões</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Requisitos Funcionais</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
@@ -363,7 +363,7 @@
                                 </div>
                                 <div class="p-4 pt-0">
                                     <h1 class="mb-3">
-                                        <small class="align-top" style="font-size: 22px; line-height: 45px;">R$</small>2.268<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ ano</small>
+                                        <small class="align-top" style="font-size: 22px; line-height: 45px;">R$</small>1.673<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ ano</small>
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Gravação e Transcrição de Reuniões</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Requisitos Funcionais</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
