Correção das Horas de Áudio

--- a/public/index.html
+++ b/public/index.html
@@ -303,7 +303,8 @@
                                     <h1 class="mb-3">
                                         <small class="align-top" style="font-size: 22px; line-height: 45px;">R$</small>156<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ mês</small>
                                     </h1>
-                                    <div class="d-flex justify-content-between mb-3"><span>Gravação e Transcrição de Reuniões</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Gravação de Reuniões Ilimitada</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Transcrição e Análise de 10 horas de áudio</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Requisitos Funcionais</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de User Stories</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Roteiros de Perguntas</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
@@ -319,10 +320,11 @@
                                     <span>Para empresas de pequeno e médio porte</span>
                                 </div>
                                 <div class="p-4 pt-0">
-                                    <h1 class="mb-3">
+                                    <h1 class="mb-3">   
                                         <small class="align-top" style="font-size: 22px; line-height: 45px;">R$</small>799<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ mês</small>
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Tudo do Plano Profissional</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Transcrição e Análise de 30 horas de áudio</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Arquitetura Técnica Sugerida</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Itens Técnicos Precificáveis</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração da Proposta Comercial</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
@@ -365,7 +367,8 @@
                                     <h1 class="mb-3">
                                         <small class="align-top" style="font-size: 22px; line-height: 45px;">R$</small>1.673<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ ano</small>
                                     </h1>
-                                    <div class="d-flex justify-content-between mb-3"><span>Gravação e Transcrição de Reuniões</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Gravação de Reuniões Ilimitada</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Transcrição e Análise de 10 horas de áudio</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Requisitos Funcionais</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de User Stories</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Roteiros de Perguntas</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
@@ -385,6 +388,7 @@
                                         <small class="align-top" style="font-size: 22px; line-height: 45px;">R$</small>9.096<small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ ano</small>
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Tudo do Plano Profissional</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Transcrição e Análise de 30 horas de áudio</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Arquitetura Técnica Sugerida</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Itens Técnicos Precificáveis</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração da Proposta Comercial</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
@@ -404,6 +408,7 @@
                                         <small class="align-top" style="font-size: 22px; line-height: 45px;">Sob</small> Consulta
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Tudo do Plano Profissional e Equipes</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Transcrição e Análise de 30 horas de áudio</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração Automática do Código do Projeto</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Deploy Inicial Automático do Projeto</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Prompts Automática</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
