Adição de Itens para Estimativa de Desenvolvimento

--- a/public/index.html
+++ b/public/index.html
@@ -325,8 +325,8 @@
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Tudo do Plano Profissional</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Transcrição e Análise de 30 horas de áudio</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
-                                    <div class="d-flex justify-content-between mb-3"><span>Geração de Arquitetura Técnica Sugerida</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Itens Técnicos Precificáveis</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Geração de Itens para Estimativa de Desenvolvimento</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração da Proposta Comercial</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <a href="https://calendly.com/cheila-portela-prototipai/30min" class="btn btn-secondary-gradient rounded-pill py-2 px-4 mt-4">Fale Conosco</a>
                                 </div>
@@ -344,6 +344,7 @@
                                         <small class="align-top" style="font-size: 22px; line-height: 45px;">Sob</small> Consulta
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Tudo do Plano Profissional e Equipes</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Geração de Arquitetura Técnica Sugerida</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração Automática do Código do Projeto</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Deploy Inicial Automático do Projeto</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Prompts Automática</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
@@ -389,8 +390,8 @@
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Tudo do Plano Profissional</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Transcrição e Análise de 30 horas de áudio</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
-                                    <div class="d-flex justify-content-between mb-3"><span>Geração de Arquitetura Técnica Sugerida</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Itens Técnicos Precificáveis</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Geração de Itens para Estimativa de Desenvolvimento</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração da Proposta Comercial</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <a href="https://calendly.com/cheila-portela-prototipai/30min" class="btn btn-secondary-gradient rounded-pill py-2 px-4 mt-4">Fale Conosco</a>
                                 </div>
@@ -409,6 +410,7 @@
                                     </h1>
                                     <div class="d-flex justify-content-between mb-3"><span>Tudo do Plano Profissional e Equipes</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Transcrição e Análise de 30 horas de áudio</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
+                                    <div class="d-flex justify-content-between mb-3"><span>Geração de Arquitetura Técnica Sugerida</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração Automática do Código do Projeto</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Deploy Inicial Automático do Projeto</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
                                     <div class="d-flex justify-content-between mb-3"><span>Geração de Prompts Automática</span><i class="fa fa-check text-primary-gradient pt-1"></i></div>
